--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -14,6 +14,7 @@
       <tr>
         <td><%= restaurant.name %></td>
         <td><%= restaurant.address %></td>
+        <td><%= link_to 'Show', restaurant %></td>
       </tr>
     <% end %>
   </tbody>
